tests/ui/from_closure_leak_slot_fail.stderr
error[E0521]: borrowed data escapes outside of closure
 --> tests/ui/from_closure_leak_slot_fail.rs:4:9
  |
2 |     let mut slot_leaked = None;
  |         --------------- `slot_leaked` declared here, outside of the closure body
3 |     dynify::from_closure::<(), (), _>(|slot| {
  |                                        ---- `slot` is a reference that is only valid in the closure body
4 |         slot_leaked = Some(slot);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^ `slot` escapes the closure body here
